# from_const_fn

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: lib.rs
tests/: module_tests.rs
