[package]
name = "from_const_fn"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
